# flask_lite-authorization

./: README.md  dbmodels.py  launch.bat  main.py  pyproject.toml  requirements.txt
liteauth/: __init__.py  account.py  accountcp.py  auth.py
liteauth/static/: auth.css  base.css  index.css  profile.css
liteauth/templates/: base.html  index.html
liteauth/templates/auth/: login.html  register.html
liteauth/templates/profile/: profile.html
static/: auth.css  base.css  error.css  index.css
templates/: base.html  error.html  index.html
templates/auth/: login.html  register.html
