[tool.poetry]
name = "liteauth"
version = "3.1.0"
description = "Web authorization written on the flask library."
authors = ["Razenxc aka Alexey A."]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.3.2"
Flask-SQLAlchemy = "^3.0.5"
bcrypt = "^4.0.1"
python-dotenv = "^1.0.0"
waitress = "^2.1.2"


[tool.poetry.group.dev.dependencies]
poetry = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
